# libduallutils

./: Cargo.toml  README.md  build64.bat
bindings/pascal/src/: DuallUtils.pas  libduallutils.pas
bindings/pascal/tests/: tests.dpr  tests.dproj  tests.lpi
src/: lib.rs  linux.rs  utils.rs  windows.rs
