[package]
name = 'duallutils'
version = '3.3.0'
authors = ['silvioprog <silvioprog@gmail.com>']
edition = '2018'

[lib]
crate-type = [
    'cdylib',
    'staticlib',
]
[profile.release]
lto = true

[dependencies]
libc = '0.2.66'
rust-crypto = '0.2.36'
opener = '0.4.1'
single-instance = '0.1.1'
system_shutdown = '3.0.0'
lock_keys = '1.0.0'
sysinfo = '0.10.3'
[target."cfg(windows)".dependencies.winapi]
version = '0.3'
features = [
    'datetimeapi',
    'sysinfoapi',
    'winerror',
]
