[package]
name = "duallutils"
version = "3.4.3"
authors = ["silvioprog <silvioprog@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true

[dependencies]
libc = "^0.2"
rust-crypto = "^0.2"
opener = "^0.4"
single-instance = "^0.1"
system_shutdown = "^3"
lock_keys = "^1"
sysinfo = "^0.14"
glob = "^0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["datetimeapi", "sysinfoapi", "winerror", "tlhelp32"] }